--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div id="scoreCard">
+            <div id="card"></div>
+        </div>
         <div id="gameBoard">
-            <canvas id="myCanvas" width="400px" height="400px"></canvas>
+            <canvas id="myCanvas" width="420px" height="420px"></canvas>
         </div>
         
         <script src="app.js" async defer></script>
